k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: devtinder
  labels:
    name: devtinder
