k8s/loki-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: devtinder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:latest
        ports:
        - name: loki
          containerPort: 3100
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: loki-config
          mountPath: /etc/loki
      volumes:
      - name: loki-config
        configMap:
          name: loki-config
