k8s/loki-service.yml
# k8s/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: devtinder
spec:
  selector:
    app: loki
  ports:
  - name: loki
    port: 3100
    targetPort: 3100
  type: ClusterIP
